CHANGES IN VERSION 1.1.7
--------------------------

  o Fixed bug with limits of the log2 OR values when plotting differential
    windows.



CHANGES IN VERSION 1.1.6
--------------------------

  o Fixed bug in creation of gene annotation when an exon belongs to more
    than one transcript.
  o Fixed bug when only one sample is provided (no name in assay columns).

CHANGES IN VERSION 1.1.5
--------------------------

  o Fixed bug in selection of reference UMI4C sample when more than 1 sample
    has the same number of total UMIs. Now it will select the first one.
    The selection of sample to use as reference can be overriden by the
    `ref_umi4c` argument.

CHANGES IN VERSION 1.1.4
--------------------------

  o Fixed bug in domainogram plotting where white color was not aligned
    with 0 log2 FC.

CHANGES IN VERSION 1.1.3
--------------------------

  o Fixed bug when providing a reference sample to use for normalizing UMI
    counts.

CHANGES IN VERSION 1.1.2
--------------------------

  o Fixed bug when `cut_pos`!=0 that generated a gap in the digested genome
    object (see issue #8)

CHANGES IN VERSION 0.99.21
--------------------------

  o Improvements in vignette and documentation.

CHANGES IN VERSION 0.99.20
--------------------------

  o Avoid duplication of fragment end calculation in plotDifferential for
    DESeq2 results.

CHANGES IN VERSION 0.99.19
--------------------------

  o Minor documentation changes to pass Bioconductor checks.


CHANGES IN VERSION 0.99.18
--------------------------

  o Fix DESeq2 example.
  o Reduce size of installed example tsv.gz count files.


CHANGES IN VERSION 0.99.17
--------------------------

  o Re-run example datasets and use again links from figshare.

CHANGES IN VERSION 0.99.16
--------------------------

IMPORTANT

  o This version is not compatible with the .tsv.gz files created by
    previous versions. You will need to run `contactsUMI4C()` again to generate
    updated .tsv.gz files.

UPDATES
