@@ -13,7 +13,7 @@ export(createGeneAnnotation)
 export(darken)
 export(demultiplexFastq)
 export(dgram)
-export(differentialNbinomWaldTestUMI4C)
+export(diffWaldUMI4C)
 export(digestGenome)
 export(downloadUMI4CexampleData)
 export(fisherUMI4C)
