@@ -59,22 +59,21 @@
 #'   bait_expansion = 2e6
 #' )
 #' 
-#' umi_wald <- differentialNbinomWaldTestUMI4C(umi4c=umi,
-#'                                             design=~condition,
-#'                                             alpha = 100)
+#' umi_wald <- diffWaldUMI4C(umi4c=umi,
+#'                       design=~condition,
+#'                       alpha = 100)
 #' @export
-differentialNbinomWaldTestUMI4C <- function(umi4c,
-                                            design=~condition,
-                                            normalized=TRUE,
-                                            padj_method="fdr",
-                                            query_regions=NULL,
-                                            padj_threshold=0.05,
-                                            penalty=0.1,
-                                            alpha=20){
+diffWaldUMI4C <- function(umi4c,
+                      design=~condition,
+                      normalized=TRUE,
+                      padj_method="fdr",
+                      query_regions=NULL,
+                      padj_threshold=0.05,
+                      penalty=0.1,
+                      alpha=20){
   # umi4c object to DDS object
   dds <- UMI4C2dds(umi4c=umi4c,
-                   design=~condition,
-                   query_regions=query_regions)
+                   design=~condition)
   
   # variance stabilizing transformation
   dds <- vstUMI4C(dds=dds)
@@ -85,30 +84,28 @@ differentialNbinomWaldTestUMI4C <- function(umi4c,
                              penalty=penalty)
   
   # differential contacts using DESeq2 Wald Test
-  dds <- nbinomWaldTestUMI4C(dds=dds)
+  dds <- nbinomWaldTestUMI4C(dds=dds,
+                             query_regions = query_regions)
   
   # DDS object to umi4c object
-  umi4c <- deseq2UMI4C(umi4c=umi4c,
-                       dds=dds,
-                       design=~condition,
-                       normalized=normalized,
-                       padj_method=padj_method,
-                       padj_threshold=padj_threshold)
+  umi4c <- dds2UMI4C(umi4c=umi4c,
+                     dds=dds,
+                     design=~condition,
+                     normalized=normalized,
+                     padj_method=padj_method,
+                     padj_threshold=padj_threshold)
   
   return(umi4c)
 }
 #' UMI4Cats object to DDS object.
 #' 
 #' Transforms an UMI4C object to a DDS object
-#' @param ... Other arguments to be passed to \code{\link[DESeq2]{DESeq}}
 #' function.
+#' @inheritParams diffWaldUMI4C
 #' @return DDS object.
-#' @inheritParams differentialNbinomWaldTestUMI4C
 #' @import GenomicRanges
 UMI4C2dds <- function(umi4c,
-                      design = ~condition,
-                      query_regions=NULL,
-                      ...){
+                      design = ~condition){
   
   stopifnot(is(umi4c, "UMI4C"))
   
@@ -120,20 +117,12 @@ UMI4C2dds <- function(umi4c,
     metadata = metadata(umi4c),
     design = ~ condition)
   
-  # subset DDS taking in account query regions
-    if (!is.null(query_regions)) {
-      dds <- subsetByOverlaps(dds, query_regions)
-      query_regions <- rowRanges(dds)
-      colnames(mcols(query_regions))[1] <- "id"
-    } else {
-      query_regions <- rowRanges(umi4c)
-      colnames(mcols(query_regions))[1] <- "id"
-    }
-  
-  rowRanges(dds) <- query_regions
+  rowRanges(dds) <- rowRanges(umi4c)
+  colnames(mcols(rowRanges(dds)))[1] <- "id"
     
-    return(dds)
+  return(dds)
 }
+
 #' Variance stabilizing transformation
 #' 
 #' Using a DDS object performs a variance stabilizing transformation from DESeq2 
@@ -191,7 +180,7 @@ vstUMI4C <- function(dds){
 #' @return DDS object with monotone smoothed fit counts. 
 #' @details This function computes the smoothing function for the VST values, based on
 #' \href{https://CRAN.R-project.org/package=fda}{fda} package, and calculates a symmetric monotone fit counts for the distance dependency
-#' @inheritParams differentialNbinomWaldTestUMI4C
+#' @inheritParams diffWaldUMI4C
 smoothMonotoneUMI4C <- function(dds,
                                 alpha=20,
                                 penalty=0.1){
@@ -249,7 +238,7 @@ smoothMonotoneUMI4C <- function(dds,
 #' @details This function computes the smoothing function for the VST values, 
 #' based on \href{https://CRAN.R-project.org/package=fda}{fda} package, and 
 #' calculates a symmetric monotone fit counts for the distance dependency
-#' @inheritParams differentialNbinomWaldTestUMI4C
+#' @inheritParams diffWaldUMI4C
 .smoothMonotone <- function(trafo_counts,
                             alpha=20,
                             penalty=0.1,
@@ -273,6 +262,7 @@ smoothMonotoneUMI4C <- function(dds,
 #' \code{DESeq2} package. 
 #' @param dds DDS object as generated by \code{smoothMonotoneUMI4C} with the 
 #' smooth monotone fit counts
+#' @inheritParams diffWaldUMI4C
 #' @return DDS object with the DESeq2 Wald Test results, 
 #' with results columns accessible with the \code{results} function.
 #' @details This function back-transform fitted values to the
@@ -280,7 +270,8 @@ smoothMonotoneUMI4C <- function(dds,
 #' obtin normalizaed factors unsing \code{normalizationFactors} from 
 #' \code{DESeq2} package. To detect differences between conditions, the DESeq2 
 #' Wald Test is applied to fitted counts with the normalization factors. 
-nbinomWaldTestUMI4C <- function(dds){
+nbinomWaldTestUMI4C <- function(dds,
+                                query_regions=NULL){
   if (!c("fit") %in% names(assays(dds))) 
     stop("No assay 'fit' found. Check your input.")
   
@@ -289,6 +280,9 @@ nbinomWaldTestUMI4C <- function(dds){
     "Starting nbinomWaldTestUMI4C using:\n",
     "> Samples of DDS object:\n", paste(colnames(dds), sep="", collapse=", "), "\n"
   ))
+  
+  # Select only query_regions if present
+  if(!is.null(query_regions)) dds <- subsetByOverlaps(dds, query_regions)
   
   # define inverse vst function
   coefs <- attr(DESeq2::dispersionFunction(dds), "coefficients")
@@ -299,13 +293,15 @@ nbinomWaldTestUMI4C <- function(dds){
   
   # backtransform fitted counts
   fit <-  attr(dds, "inverse-vst")(assays(dds)[["fit"]])
+  
   # get normalization factors
   loggeomeans <- rowMeans(log(fit))
   normFactors <- exp(log(fit) - loggeomeans)
   DESeq2::normalizationFactors(dds) <- as.matrix(normFactors)
+
   # wald test
   design(dds) <- formula(~condition)
-  dds <- try(estimateDispersions(dds))
+  # dds <- try(estimateDispersions(dds))
   dds <- DESeq2::nbinomWaldTest(dds)
   message(
     paste0("[", Sys.time(), "] "),
@@ -314,15 +310,16 @@ nbinomWaldTestUMI4C <- function(dds){
   
   return(dds)
 }
+
 #' DDS object to UMI4Cats object.
 #' 
 #' Transforms an DDS object to a UMI4C object after applying 
 #' \code{nbinomWaldTestUMI4C}.
-#' @inheritParams differentialNbinomWaldTestUMI4C
+#' @inheritParams diffWaldUMI4C
 #' @param dds DDS object as generated by \code{nbinomWaldTestUMI4C} 
 #' with the DESeq2 Wald Test results
 #' @return UMI4C object with the DESeq2 Wald Test results.
-deseq2UMI4C <- function(umi4c,
+dds2UMI4C <- function(umi4c,
                         dds,
                         design = ~condition,
                         normalized = TRUE,
