@@ -4,7 +4,7 @@
 \alias{UMI4C2dds}
 \title{UMI4Cats object to DDS object.}
 \usage{
-UMI4C2dds(umi4c, design = ~condition, query_regions = NULL, ...)
+UMI4C2dds(umi4c, design = ~condition)
 }
 \arguments{
 \item{umi4c}{UMI4C object as generated by \code{makeUMI4C} or the
@@ -13,17 +13,11 @@ UMI4C2dds(umi4c, design = ~condition, query_regions = NULL, ...)
 \item{design}{A \code{formula} or \code{matrix}. The formula expresses how
 the counts for each fragment end depend on the variables in \code{colData}.
 See  \code{\link[DESeq2]{DESeqDataSet}}.}
-
-\item{query_regions}{\code{GRanges} object or \code{data.frame} containing
-the coordinates of the genomic regions you want to use to perform the
-analysis in specific genomic intervals. Default: NULL.}
-
-\item{...}{Other arguments to be passed to \code{\link[DESeq2]{DESeq}}
-function.}
 }
 \value{
 DDS object.
 }
 \description{
 Transforms an UMI4C object to a DDS object
+function.
 }
