@@ -46,7 +46,7 @@ in the \code{grouping} argument (default: "condition") and then normalize it
 to \code{ref_umi4c}.
 
 The differential analysis can be performed with 
-\code{\link{fisherUMI4C}} or \code{\link{differentialNbinomWaldTestUMI4C}} 
+\code{\link{fisherUMI4C}} or \code{\link{diffWaldUMI4C}} 
 functions. Both will return a \linkS4class{UMI4C} object containing the 
 results of the differential test. You can access these results with the 
 method \code{\link{resultsUMI4C}}.
