@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/differentialNbinomWaldTestUMI4C.R
-\name{deseq2UMI4C}
-\alias{deseq2UMI4C}
+\name{dds2UMI4C}
+\alias{dds2UMI4C}
 \title{DDS object to UMI4Cats object.}
 \usage{
-deseq2UMI4C(
+dds2UMI4C(
   umi4c,
   dds,
   design = ~condition,
