@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/differentialNbinomWaldTestUMI4C.R
-\name{differentialNbinomWaldTestUMI4C}
-\alias{differentialNbinomWaldTestUMI4C}
+\name{diffWaldUMI4C}
+\alias{diffWaldUMI4C}
 \title{Differential UMI4C contacts using DESeq2 Wald Test}
 \usage{
-differentialNbinomWaldTestUMI4C(
+diffWaldUMI4C(
   umi4c,
   design = ~condition,
   normalized = TRUE,
@@ -87,7 +87,7 @@ umi <- makeUMI4C(
   bait_expansion = 2e6
 )
 
-umi_wald <- differentialNbinomWaldTestUMI4C(umi4c=umi,
-                                            design=~condition,
-                                            alpha = 100)
+umi_wald <- diffWaldUMI4C(umi4c=umi,
+                      design=~condition,
+                      alpha = 100)
 }
