@@ -4,11 +4,15 @@
 \alias{nbinomWaldTestUMI4C}
 \title{Differential UMI4C contacts using DESeq2 Wald Test}
 \usage{
-nbinomWaldTestUMI4C(dds)
+nbinomWaldTestUMI4C(dds, query_regions = NULL)
 }
 \arguments{
 \item{dds}{DDS object as generated by \code{smoothMonotoneUMI4C} with the 
 smooth monotone fit counts}
+
+\item{query_regions}{\code{GRanges} object or \code{data.frame} containing
+the coordinates of the genomic regions you want to use to perform the
+analysis in specific genomic intervals. Default: NULL.}
 }
 \value{
 DDS object with the DESeq2 Wald Test results, 
