@@ -51,7 +51,7 @@ Taking into account this main application, UMI4Cats has been developed to facili
 
 - Each analysis (and `UMI4C` object) should correspond to the **same viewpoint**. If you are analyzing different viewpoints in the same or different loci, you need to analyze them separately. 
 
-- The UMI4Cats package is mostly oriented to the performance of differential analysis. If you don't have replicates yet or want to focus your analysis on a specific set of regions (like enhancers) we recommend you to use Fisher's Exact Test (`fisherUMI4C()`). If, on the other hand, you have several replicates, you might benefit from using a DESeq2 differential test specific for UMI-4C data (`differentialNbinomWaldTestUMI4C()`) or you can continue to use Fisher's exact test. 
+- The UMI4Cats package is mostly oriented to the performance of differential analysis. If you don't have replicates yet or want to focus your analysis on a specific set of regions (like enhancers) we recommend you to use Fisher's Exact Test (`fisherUMI4C()`). If, on the other hand, you have several replicates, you might benefit from using a DESeq2 differential test specific for UMI-4C data (`diffWaldUMI4C()`) or you can continue to use Fisher's exact test. 
 
 - When performing the differential analysis, UMI4Cats is only able to deal with a **condition with 2 different levels**. If you have more than two conditions, you should produce different UMI4C objects and perform pairwise comparisons.
 
@@ -138,7 +138,7 @@ umi_fisher <- fisherUMI4C(umi, filter_low = 30, grouping="condition")
 plotUMI4C(umi_fisher, ylim = c(0, 10), grouping="condition")
 
 # DESeq2 Wald Test
-umi_wald <- differentialNbinomWaldTestUMI4C(umi4c=umi,
+umi_wald <- diffWaldUMI4C(umi4c=umi,
                                             design=~condition,
                                             alpha = 20)
 plotUMI4C(umi_wald, ylim = c(0, 10), grouping="condition")
@@ -463,7 +463,7 @@ umi_dif2 <- fisherUMI4C(umi,
 It is also possible to perform a differential analysis based on `DESeq2`'s Wald test. For using this differential test it is necessary to have replicates for the grouping variable included in the design, as they are needed to calculate dispersions.
 
 ```{r dif-deseq, message=TRUE}
-umi_dif3 <- differentialNbinomWaldTestUMI4C(umi,
+umi_dif3 <- diffWaldUMI4C(umi,
                                            design = ~condition,
                                            alpha=100) # Low alpha to make computation faster
 ```
